CreatedEventPublisher interface, CustomWebsocketHandler